--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-resize-detector": "^11.0.1",
     "styled-components": "^5.3.11",
     "uuid": "^9.0.1"
   }
